--- a/engine/app1/app1.vcxproj.filters
+++ b/engine/app1/app1.vcxproj.filters
@@ -2,5 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="app1.cpp" />
+    <ClCompile Include="game.cpp" />
+    <ClCompile Include="desktopInput.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="game.h" />
   </ItemGroup>
 </Project>
