--- a/engine/mywow/mywowdriver.vcxproj.filters
+++ b/engine/mywow/mywowdriver.vcxproj.filters
@@ -8,7 +8,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\renderer\mywowdriver.h" />
-    <ClInclude Include="..\renderer\COpenGLPCH.h">
+    <ClInclude Include="..\renderer\opengl\COpenGLPCH.h">
       <Filter>OpenGL</Filter>
     </ClInclude>
   </ItemGroup>
