--- a/engine/mywow/mywow.vcxproj.filters
+++ b/engine/mywow/mywow.vcxproj.filters
@@ -164,6 +164,9 @@
     <ClInclude Include="..\common\rect.h">
       <Filter>common</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine\SMaterial.h">
+      <Filter>engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\CFileSystem.cpp">
