--- a/engine/mywow/mywow.vcxproj
+++ b/engine/mywow/mywow.vcxproj
@@ -49,6 +49,7 @@
     <ClInclude Include="..\common\wowWDC3File.h" />
     <ClInclude Include="..\common\wowWMOFile.h" />
     <ClInclude Include="..\common\wowWMOStruct.h" />
+    <ClInclude Include="..\engine\CBLPImage.h" />
     <ClInclude Include="..\engine\CCamera.h" />
     <ClInclude Include="..\engine\CGeometryCreator.h" />
     <ClInclude Include="..\engine\CGraphics.h" />
@@ -86,11 +87,13 @@
     <ClCompile Include="..\common\wowWDC3File.cpp" />
     <ClCompile Include="..\common\wowWMOFile.cpp" />
     <ClCompile Include="..\engine\CBlit.cpp" />
+    <ClCompile Include="..\engine\CBLPImage.cpp" />
     <ClCompile Include="..\engine\CCImage.cpp" />
     <ClCompile Include="..\engine\CInputReader.cpp" />
     <ClCompile Include="..\engine\COSInfo.cpp" />
     <ClCompile Include="..\engine\CSysUtil.cpp" />
     <ClCompile Include="..\engine\CTimer.cpp" />
+    <ClCompile Include="..\engine\ddslib.cpp" />
     <ClCompile Include="..\engine\Engine.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
