--- a/engine/renderer/mywowdriver.vcxproj
+++ b/engine/renderer/mywowdriver.vcxproj
@@ -31,9 +31,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\renderer\mywowdriver.cpp" />
-    <ClCompile Include="..\renderer\OpenGL\COpenGLDriver_base.cpp" />
+    <ClCompile Include="OpenGL\COpenGLDriver.cpp" />
     <ClCompile Include="..\renderer\OpenGL\COpenGLDriver_draw.cpp" />
     <ClCompile Include="..\renderer\OpenGL\COpenGLMaterialRenderComponent.cpp" />
+    <ClCompile Include="OpenGL\COpenGLDriver.cpp" />
     <ClCompile Include="OpenGL\COpenGLExtension.cpp" />
     <ClCompile Include="OpenGL\COpenGLRenderTarget.cpp" />
     <ClCompile Include="OpenGL\COpenGLTexture.cpp" />
